tests/rosetta/out/C/bitmap-b-zier-curves-quadratic.error
cc: exit status 1
/tmp/bitmap-b-zier-curves-quadratic.c: In function ‘pixelFromRgb’:
/tmp/bitmap-b-zier-curves-quadratic.c:74:60: error: invalid operands to binary % (have ‘double’ and ‘int’)
   74 |   __auto_type r = (int)(((((double)rgb) / ((double)65536)) % 256));
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                                         |
      |                                         double
/tmp/bitmap-b-zier-curves-quadratic.c:75:58: error: invalid operands to binary % (have ‘double’ and ‘int’)
   75 |   __auto_type g = (int)(((((double)rgb) / ((double)256)) % 256));
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                                         |
      |                                         double
/tmp/bitmap-b-zier-curves-quadratic.c:77:25: error: ‘r’ undeclared (first use in this function)
   77 |   return (pixel_t){.r = r, .g = g, .b = b};
      |                         ^
/tmp/bitmap-b-zier-curves-quadratic.c:77:25: note: each undeclared identifier is reported only once for each function it appears in
/tmp/bitmap-b-zier-curves-quadratic.c:77:33: error: ‘g’ undeclared (first use in this function)
   77 |   return (pixel_t){.r = r, .g = g, .b = b};
      |                                 ^
/tmp/bitmap-b-zier-curves-quadratic.c: In function ‘newBitmap’:
/tmp/bitmap-b-zier-curves-quadratic.c:95:5: error: ‘d’ undeclared (first use in this function)
   95 |     d = 0;
      |     ^
/tmp/bitmap-b-zier-curves-quadratic.c: At top level:
/tmp/bitmap-b-zier-curves-quadratic.c:101:11: error: unknown type name ‘map_string_int’
  101 | int setPx(map_string_int b, int x, int y, pixel_t *p) {
      |           ^~~~~~~~~~~~~~
/tmp/bitmap-b-zier-curves-quadratic.c:109:10: error: unknown type name ‘map_string_int’
  109 | int fill(map_string_int b, pixel_t *p) {
      |          ^~~~~~~~~~~~~~
/tmp/bitmap-b-zier-curves-quadratic.c:123:13: error: unknown type name ‘map_string_int’
  123 | int fillRgb(map_string_int b, int rgb) { fill(b, &pixelFromRgb(rgb)); }
      |             ^~~~~~~~~~~~~~
/tmp/bitmap-b-zier-curves-quadratic.c:125:10: error: unknown type name ‘map_string_int’
  125 | int line(map_string_int b, int x0, int y0, int x1, int y1, pixel_t *p) {
      |          ^~~~~~~~~~~~~~
/tmp/bitmap-b-zier-curves-quadratic.c:160:13: error: unknown type name ‘map_string_int’
  160 | int bezier2(map_string_int b, int x1, int y1, int x2, int y2, int x3, int y3,
      |             ^~~~~~~~~~~~~~
/tmp/bitmap-b-zier-curves-quadratic.c: In function ‘_mochi_main’:
/tmp/bitmap-b-zier-curves-quadratic.c:210:3: warning: implicit declaration of function ‘fillRgb’ [-Wimplicit-function-declaration]
  210 |   fillRgb(b, 14614575);
      |   ^~~~~~~
/tmp/bitmap-b-zier-curves-quadratic.c:211:3: warning: implicit declaration of function ‘bezier2’ [-Wimplicit-function-declaration]
  211 |   bezier2(b, 20, 150, 500, (-100), 300, 280, &pixelFromRgb(4165615));
      |   ^~~~~~~
/tmp/bitmap-b-zier-curves-quadratic.c:211:46: error: lvalue required as unary ‘&’ operand
  211 |   bezier2(b, 20, 150, 500, (-100), 300, 280, &pixelFromRgb(4165615));
      |                                              ^
